# Steering-Control-Module

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  Point.cpp  SteeringControl.cpp  SteeringControlOutput.cpp  main.cpp
demo/: CMakeLists.txt  main.cpp
docs/: steer_doxy.Doxyfile
docs/html/: PointTest_8cpp.html  PointTest_8cpp.js  PointTest_8cpp__incl.map  PointTest_8cpp__incl.md5  Point_8cpp.html  Point_8cpp__incl.map  Point_8cpp__incl.md5  Point_8h.html  Point_8h__dep__incl.map  Point_8h__incl.map  Point_8h_source.html  SteeringControlOutputTest_8cpp.html  SteeringControlOutputTest_8cpp.js  SteeringControlOutputTest_8cpp__incl.map  SteeringControlOutput_8cpp.html  SteeringControlOutput_8cpp__incl.map  SteeringControlOutput_8cpp__incl.md5  SteeringControlOutput_8h.html  SteeringControlOutput_8h__dep__incl.map  SteeringControlOutput_8h__dep__incl.md5  SteeringControlOutput_8h_source.html  SteeringControlTest_8cpp.html  SteeringControlTest_8cpp.js  SteeringControlTest_8cpp__incl.map  SteeringControl_8cpp.html  SteeringControl_8cpp.js  SteeringControl_8cpp__incl.map  SteeringControl_8h.html  SteeringControl_8h__dep__incl.map  SteeringControl_8h__dep__incl.md5  SteeringControl_8h__incl.map  SteeringControl_8h_source.html  annotated.html  annotated_dup.js  app_2main_8cpp.html  app_2main_8cpp.js  app_2main_8cpp__incl.map  app_2main_8cpp__incl.md5  (+68 more)
include/: Point.h  SteeringControl.h  SteeringControlOutput.h  virtualPoint.h
results/: cppcheck output  cpplint output
test/: CMakeLists.txt  PointTest.cpp  SteeringControlOutputTest.cpp  SteeringControlTest.cpp  main.cpp
(+96 files in other folders)
